Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82417

Wrong "setPath" method documentation for MapPolyline QML object

XMLWordPrintable

    • 07de1d0f0f93b742434e2fcfda70bf70cb6373c9 (qt/qtlocation/5.14)

      The "setPath(geopath)" of the MapPolyline QML object has void return type ( see qdeclarativepolylinemapitem.cpp) . The documentation states wrongly it has "int" return type. This caused me to hours of additional work. Thank you

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paangele Paolo Angelelli
            rykomick Robert V
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes