Fix return type of doc for qmlmethod MapPolyline.setPath

Fixes: QTBUG-82417
Change-Id: Id9be6f9e248612bce3a17a65d5f73f7ec4c9f45f
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>