src/location/declarativemaps/qdeclarativepolylinemapitem.cpp
@@ -807,7 +807,7 @@ void QDeclarativePolylineMapItem::setPath(const QJSValue &value)
 }
 
 /*!
-    \qmlmethod int MapPolyline::setPath(geopath path)
+    \qmlmethod void MapPolyline::setPath(geopath path)
 
     Sets the \a path using a geopath type.
 
